--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,9 +12,14 @@
 		"module": "NodeNext",
 		"moduleResolution": "NodeNext",
 		"baseUrl": ".",
-		// "paths": {
-		// 	"$lib": ["./src/lib"],
-		// 	"$lib/*": ["./src/b/*"]
-		// }
+		"paths": {
+			"@/*": ["./src/*"]
+		}
 	}
 }
+
+// "paths": {
+// 	"$lib": ["./src/lib"],
+// 	"$lib/*": ["./src/b/*"]
+
+// }
